# FightGPT

./: CMakeLists.txt  README.html  README.md  battle.cpp  build.sh  character.cpp  create_textures.py  main.cpp  map.cpp
include/: CharacterSelectionState.h  GameLogic.h  GamePlayState.h  GameState.h  Logger.h  NameInputState.h  StoryState.h
src/: CharacterSelectionState.cpp  GameLogic.cpp  GamePlayState.cpp  NameInputState.cpp  StoryState.cpp  main.cpp
